--- a/ibutestportal/templates/ibutestportal/index.html
+++ b/ibutestportal/templates/ibutestportal/index.html
@@ -8,12 +8,9 @@
 {% if apilist %}
     <ul>
     {% for api in apilist %}
-        <li>{{ api.request_name }}</li>
-        <li><input type="url" value="{{ api.request_url }}" size="100" ></li>
-        <li><textarea rows="30" cols="80">{{ api.request_content }}</textarea>  <textarea rows="30" cols="80">{{ api.response_content }}</textarea></li>
+        <li><a href="{% url 'api:detail' api.id  %}">{{ api.request_name }}</a></li>
     {% endfor %}
     </ul>
-
 {% endif %}
 </body>
 </html>
